<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sendo_app_name" translatable="false">Sendo</string>
    <string name="sendo_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="sendo_navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="sendo_action_settings">Settings</string>
    <string name="sendo_search">Search</string>
    <string name="sendo_measurement">Measurement</string>
    <string name="sendo_home">Home</string>
    <string name="sendo_exercise_list">Exercise list</string>
    <string name="sendo_settings">Settings</string>
    <string name="sendo_profile">Profile</string>
    <string name="sendo_measurements">Measurements</string>
    <string name="sendo_category">Category</string>
    <string name="sendo_group">Group</string>
    <string name="sendo_list">List</string>
    <string name="sendo_no_data">No data</string>
    <string name="sendo_create">Create</string>
    <string name="sendo_workout_num">Workout %1$d</string>
    <string name="sendo_day_number">Day number</string>
    <string name="sendo_delete">Delete</string>
    <string name="sendo_archived">Archived</string>
    <string name="sendo_tomorrow">Tomorrow</string>
    <string name="sendo_yesterday">Yesterday</string>
    <string name="sendo_today">Today</string>
    <string name="sendo_new">New</string>
    <string name="sendo_taptarget_workout_title">Add a new workout</string>
    <string name="sendo_taptarget_workout_description">Click here to add your first workout</string>
    <string name="sendo_accept">Accept</string>
    <string name="sendo_cancel">Cancel</string>
    <string name="sendo_alert_close_app_message">Are you sure you want close the app?</string>
    <string name="sendo_alert_close_app_title">Close Sendo</string>
    <string name="sendo_add">ADD</string>
    <string name="sendo_alert_add_measure_title">Add measure</string>
    <string name="sendo_create_workout">Create Workout</string>
    <string name="sendo_search_workout">Search Workout</string>
    <string name="sendo_workout">Workout</string>
    <string name="sendo_add_progress">Add Progress</string>
    <string name="sendo_day_num">DAY %1$d</string>
    <string name="sendo_week_num">WEEK %1$d</string>
    <string name="sendo_alert_delete_workout_title">Delete workout</string>
    <string name="sendo_alert_delete_workout_message">Are you sure you want to delete this workout?</string>
    <string name="sendo_permision_denied">Permission denied</string>
    <string name="sendo_snackbar_deleted_exercise">%1$s deleted.</string>
    <string name="sendo_snackbar_undo">UNDO</string>
    <string name="sendo_snackbar_archived_exercise">%1$s archived.</string>
    <string name="sendo_snackbar_unarchived_exercise">%1$s unarchived.</string>
    <string name="sendo_error_enter_value">Enter a value</string>
    <string name="sendo_dialog_add_exercise_title">Add exercise</string>
    <string name="sendo_period">Period</string>
    <string name="sendo_weight">Weight</string>
    <string name="sendo_length">Length</string>
    <string name="sendo_add_first_workout">Add your first workout!</string>
    <string name="sendo_insert">Insert</string>
    <string name="sendo_exercise">Exercise</string>
    <string name="sendo_series">Series</string>
    <string name="sendo_repetition">Repetition</string>
    <string name="sendo_add_first_measurement">Add your first measurement!</string>
    <string name="sendo_not_enough_data">Not enough data</string>
    <string name="sendo_measure_type">Measure type</string>
    <string name="sendo_insert_value">Insert value</string>
    <string name="sendo_date">Date</string>
    <string name="sendo_progress">Progress</string>
    <string name="sendo_back">Back</string>
    <string name="sendo_theme">Theme</string>
    <string name="sendo_green_theme">Green theme</string>
    <string name="sendo_dark_theme">Dark theme</string>
    <string name="sendo_open_source_licenses">Open-source licenses</string>
    <string name="sendo_modify">Modify</string>
    <string name="sendo_modify_value">Modify value</string>
    <string name="sendo_delete_measurement">Delete measurement</string>
    <string name="sendo_workload">Workload</string>
    <string name="sendo_no_exercise">There is no exercises to show</string>
    <string name="sendo_no_archived_exercise">You have no exercises archived</string>
    <string name="sendo_all">All</string>
    <string name="sendo_fav">Favorites</string>
    <string name="sendo_language">Language</string>
</resources>
