<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/sendo_search"
        android:icon="@drawable/ic_search"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/group"
        android:title="@string/sendo_group"
        android:icon="@drawable/ic_category"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/list"
                android:title="@string/sendo_all"/>

            <item android:id="@+id/fav"
                android:title="@string/sendo_fav"/>

            <item android:id="@+id/category"
                android:title="@string/sendo_category"/>

            <item android:id="@+id/archived"
                android:title="@string/sendo_archived"/>
        </menu>
    </item>

    <item android:id="@+id/delete"
        android:title="@string/sendo_delete"
        android:icon="@drawable/ic_delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/licences"
        android:title="@string/sendo_open_source_licenses"
        android:visible="false"
        app:showAsAction="never"/>
</menu>